fix bugs on small devices

--- a/my-app/src/Components/Button/Button.module.css
+++ b/my-app/src/Components/Button/Button.module.css
@@ -14,5 +14,6 @@
 @media (max-width: 768px) {
     .button {
         font-size: 16px;
+        padding:0px 16px;
     }
 }
