--- a/my-app/src/Components/Header/Header.module.css
+++ b/my-app/src/Components/Header/Header.module.css
@@ -15,3 +15,8 @@
     z-index: 52;
 
 }
+@media(max-width:460px){
+.header{
+    padding: 0 16px;
+}
+}
